@@ -31,6 +31,7 @@ Version 1.3.8+svn:
       * Charge to The Freelands
       * Meteor Lake to Fallenstar Lake
       * Triple Blitz to Alirok Marsh
+    * Minimum number of turns reduced to 1.
 
   * Unit changes and balancing
     * Created undead variations for the 'bat' and 'gryphon' race.
