@@ -26,6 +26,7 @@ Version 1.3.8+svn:
      * Charge to The Freelands
      * Meteor Lake to Fallenstar Lake
      * Triple Blitz to Alirok Marsh
+   * minimum number of turns reduced to 1
  * units:
    * balancing changes:
      * created undead variations for the 'bat' and 'gryphon' race
